# crosshook

./: .branchlet.json  .cursorrules  .editorconfig  .env.example  .envrc  .git-blame-ignore-revs  .git-cliff.toml  .gitignore  .gitmessage  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PHASE4_COVERAGE_TRACKING.md  README.md  ROADMAP.md  lefthook.yml  package-lock.json  package.json  release_notes.md
src/crosshook-native/: .gitignore  Cargo.toml  README.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
src/crosshook-native/assets/: default_capability_map.toml  default_command_argument_catalog.toml  default_host_readiness_catalog.toml  default_mangohud_presets.toml  default_optimization_catalog.toml  default_trainer_type_catalog.toml
src/crosshook-native/coverage/: index.html
src/crosshook-native/coverage/.tmp/: coverage-0.json  coverage-1.json  coverage-2.json  coverage-3.json  coverage-4.json  coverage-5.json  coverage-6.json
src/crosshook-native/coverage/src/: App.tsx.html  index.html  main.tsx.html  vite-env.d.ts.html
src/crosshook-native/coverage/src/components/: AutoPopulate.tsx.html  CommunityBrowser.tsx.html  CommunityImportWizardModal.tsx.html  CompatibilityViewer.tsx.html  ConfigHistoryPanel.tsx.html  ConsoleView.tsx.html  CustomEnvironmentVariablesSection.tsx.html  index.html  (+32 more)
src/crosshook-native/crates/crosshook-cli/: Cargo.toml
src/crosshook-native/crates/crosshook-core/: Cargo.toml
src/crosshook-native/runtime-helpers/: steam-host-trainer-runner.sh  steam-launch-helper.sh  steam-launch-trainer.sh
src/crosshook-native/src/: App.tsx  main.tsx  vite-env.d.ts
src/crosshook-native/src-tauri/: Cargo.toml  tauri.conf.json
src/crosshook-native/src-tauri/capabilities/: default.json
src/crosshook-native/src-tauri/src/: background_portal.rs  lib.rs  main.rs  paths.rs  startup.rs
src/crosshook-native/src/components/: AutoPopulate.tsx  CommandArgumentsPanel.tsx  CommunityBrowser.tsx  CommunityImportWizardModal.tsx  CompatibilityViewer.tsx  ConfigHistoryPanel.tsx  ConsoleView.tsx  CustomEnvironmentVariablesSection.tsx  ExternalResultsSection.tsx  GamescopeConfigPanel.tsx  HealthBadge.tsx  InstallGamePanel.tsx  LaunchOptimizationsPanel.tsx  LaunchPanel.tsx  LaunchPipeline.tsx  LaunchSubTabs.tsx  LauncherExport.tsx  LauncherPreviewModal.tsx  MangoHudConfigPanel.tsx  MigrationReviewModal.tsx  OfflineReadinessPanel.tsx  OfflineStatusBadge.tsx  OfflineTrainerInfoModal.tsx  OnboardingWizard.tsx  PinnedProfilesStrip.tsx  PrefixDepsPanel.tsx  ProfileActions.tsx  ProfileEditor.tsx  ProfileFormSections.tsx  ProfilePreviewModal.tsx  ProfileReviewModal.tsx  ProfileSubTabs.tsx  ProtonDbLookupCard.tsx  ProtonDbOverwriteConfirmation.tsx  ReadinessChecklist.tsx  RunExecutablePanel.tsx  SettingsPanel.tsx  SteamLaunchOptionsPanel.tsx  TrainerDiscoveryPanel.tsx  TrainerGuidance.tsx  (+1 more)
src/crosshook-native/src/constants/: browserDevPresetPaths.ts  offline.ts
src/crosshook-native/src/context/: CollectionsContext.tsx  HostReadinessContext.tsx  InspectorSelectionContext.tsx  LaunchStateContext.tsx  PreferencesContext.tsx  ProfileContext.tsx  ProfileHealthContext.tsx
src/crosshook-native/src/hooks/: useAccessibilityEnhancements.ts  useAcknowledgeVersionChange.ts  useBreakpoint.ts  useCapabilityGate.ts  useCollectionDefaults.ts  useCollectionMembers.ts  useCollections.ts  useCommandArgumentCatalog.ts  useCommandPalette.ts  useCommunityProfiles.ts  useExternalTrainerSearch.ts  useFlatpakMigrationToast.ts  useFocusTrap.ts  useGameCoverArt.ts  useGameDetailsProfile.ts  useGameDetailsRequestGuards.ts  useGameMetadata.ts  useGamepadNav.ts  useHostReadiness.ts  useImageDominantColor.ts  useImportCommunityProfile.ts  useInstallGame.ts  useLaunchHistoryForProfile.ts  useLaunchOptimizationCatalog.ts  useLaunchPlatformStatus.ts  useLaunchPrefixDependencyGate.ts  useLaunchState.ts  useLauncherExport.ts  useLauncherManagement.ts  useLibraryProfiles.ts  useLibrarySummaries.ts  useMangoHudPresets.ts  useOfflineReadiness.ts  useOnboarding.ts  usePrefixDeps.ts  usePrefixStorageManagement.ts  usePreviewState.ts  useProfile.ts  useProfileCardMeta.ts  useProfileHealth.ts  (+18 more)
src/crosshook-native/src/lib/: DevModeBanner.tsx  commands.ts  dev-indicator.css  events.ts  fixture.ts  focus-utils.ts  ipc.dev.ts  ipc.ts  runtime.ts  toggles.ts  validAppRoutes.ts
src/crosshook-native/src/styles/: breadcrumb.css  collapsible-section.css  collections-sidebar.css  community-routes.css  console-drawer.css  dashboard-routes.css  discover-routes.css  editor-routes.css  focus.css  hero-detail.css  host-tool-dashboard.css  install-routes.css  launch-pipeline.css  layout.css  library.css  onboarding-wizard.css  palette.css  preview.css  proton-manager.css  settings-routes.css  sidebar.css  theme.css  themed-select.css  utilities.css  variables.css
src/crosshook-native/src/test/: breakpoint.ts  fixtures.ts  render.tsx  setup.ts
src/crosshook-native/src/types/: collections.ts  diagnostics.ts  discovery.ts  game-details-modal.ts  game-metadata.ts  health.ts  index.ts  injection.ts  install.ts  launch-command-arguments.ts  launch-optimizations.ts  launch.ts  launcher.ts  library.ts  migration.ts  navigation.ts  offline.ts  onboarding.ts  prefix-deps.ts  prefix-storage.ts  profile-history.ts  profile-review.ts  profile.ts  proton.ts  protondb.ts  protonup.ts  run-executable.ts  settings.ts  update.ts  version.ts
src/crosshook-native/src/utils/: art.ts  capabilityDocs.ts  clipboard.ts  command-argument-catalog.ts  derivePipelineNodes.ts  dialog.ts  format.ts  health.ts  hostReadinessTooltips.ts  launch.ts  launchOptimizationPresets.ts  launchPanelActionButtonStyle.ts  launchPreviewPresentation.ts  launcherExport.ts  log.ts  mapValidationToNode.ts  optimization-catalog.ts  profile-art.ts  profile-compare.ts  proton.ts  protondb.ts  steam.ts  trainerGamescope.ts
src/crosshook-native/tests/: README.md  collections.spec.ts  helpers.ts  navigation-helpers.ts  pipeline.spec.ts  smoke.spec.ts
(+2026 files in other folders)
