[package]
name = "crosshook-native"
version = "0.2.6"
edition = "2021"
build = "build.rs"

[lib]
name = "crosshook_native"
path = "src/lib.rs"

[[bin]]
name = "crosshook-native"
path = "src/main.rs"

[dependencies]
crosshook-core = { path = "../crates/crosshook-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["fs", "process", "time"] }
tracing = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
