[package]
name = "crosshook-cli"
version.workspace = true
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
crosshook-core = { path = "../crosshook-core" }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
