[package]
name = "crosshook-cli"
version = "0.2.4"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
crosshook-core = { path = "../crosshook-core" }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
