[package]
name = "crosshook-cli"
version = "0.2.10-flatpak"
edition = "2021"

[[bin]]
name = "crosshook"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crosshook-core = { path = "../crosshook-core" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
