[package]
name = "crosshook-core"
version = "0.2.7"
edition = "2021"

[dependencies]
chrono = "0.4"
directories = "6.0.0"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.0"
tar = "0.4"
tokio = { version = "1", features = ["fs", "process", "rt", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "time",
] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.11.0"
uuid = { version = "1", features = ["v4", "serde"] }
infer = "~0.16"
nix = { version = "0.30.1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
