[package]
name = "crosshook-core"
version = "0.2.11"
edition = "2021"

[features]
default = []
# Enable catalog-only Luxtorpeda + Boxtron providers (Batch 3). Disabled in AppImage/Flatpak release builds.
experimental-providers = []
# ts-rs type export prototype (Phase 5). Off by default.
ts-rs = ["dep:ts-rs"]

[dependencies]
chrono = "0.4"
csv = "1"
directories = "6.0.0"
flate2 = "1"
xz2 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.0"
tar = "0.4"
tokio = { version = "1", features = ["fs", "macros", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "time",
] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
quick-xml = "0.39.2"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
sha2 = "0.11.0"
uuid = { version = "1", features = ["v4", "serde"] }
infer = "~0.19.0"
nix = { version = "0.31.2", features = ["fs"] }
tempfile = "3"
ts-rs = { version = "10.0", optional = true, features = ["chrono-impl", "uuid-impl", "serde-compat"] }

# Flatpak desktop-portal clients (ADR-0002). `zbus` pulls a pure-Rust D-Bus
# client; we scope it to the `tokio` feature to match the rest of the crate
# and disable `async-io` defaults. The `thiserror`-like impls are
# hand-written to keep the dep surface minimal.
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = { version = "5", default-features = false }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
wiremock = "0.6"
